--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,38 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="labelUserName">Nombre</string>
+    <string name="labelUserPassword">Contraseña</string>
+    <string name="labelUserPasswordRepeat">Repetir Contraseña</string>
+    <string name="labelEmail">Email</string>
+    <string name="labelTypeCard">Tipo de tarjeta:</string>
+    <string name="labelRadioButtonDebit">Debito</string>
+    <string name="labelRadioButtonCredit">Credito</string>
+    <string name="labelCardNumber">Número de tarjeta</string>
+    <string name="labelCardCCV">CCV</string>
+    <string name="labelExpirationDate">Fecha vencimiento:</string>
+    <string-array name="labelMonth">
+        <item>""</item>
+        <item>01</item>
+        <item>02</item>
+        <item>03</item>
+        <item>04</item>
+        <item>05</item>
+        <item>06</item>
+        <item>07</item>
+        <item>08</item>
+        <item>09</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+    </string-array>
+    <string name="labelCBU">CBU</string>
+    <string name="labelAliasCBU">Alias CBU</string>
+    <string name="labelInitialLoad">Realizar carga inicial</string>
+    <string name="labelInitialCredit">Credito inicial:" " </string>
+    <string name="labelCoditions">Acepto los terminos y condiciones</string>
+    <string name="labelBtnRegister">Registrar</string>
+    <string name="labelInitLoad">0</string>
+    <string name="ToastInvalidSpaces">Campos no validos</string>
+    <string name="ToastSuccesfullTransaction">Carga exitosa</string>
+
 </resources>
