-Agregar la funcionalidad: "Al presionar el botón “Guardar”, se debe crear una nueva instancia de Plato, para lo cual previamente deberá definir la clase Plato, junto con su constructor, getters y setters." -Hay que agregar la toolbar en las pantallas secundarias?

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,10 @@
     <string name="labelInitLoad">0</string>
     <string name="ToastInvalidSpaces">Campos no validos</string>
     <string name="ToastSuccesfullTransaction">Carga exitosa</string>
-
+    <string name="laberNuevoPlato">Nuevo Plato</string>
+    <string name="labelTituloPlato">Título</string>
+    <string name="labelDescripcion">Descripción</string>
+    <string name="labelPrecio">Precio</string>
+    <string name="labelCalorias">Calorías</string>
+    <string name="btnGuardar">Guardar</string>
 </resources>
