Se agregó toolbar en lista de platos y se creo una nueva interfaz de usuario (sin validaciones ni funcionalidades)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,7 +58,14 @@
     <string name="ToastSuccessfulTransactionPlate">El plato ha sido creado con éxito</string>
 
 
+
     <!-- Pantalla de visualizar los platos -->
     <string name="btnVer">Ver</string>
+    <string name="newPedido">Nuevo Pedido</string>
 
+    <!-- Pantalla de Nuevos Pedidos -->
+    <string name="adress">Dirección de Envío</string>
+    <string name="labelSend">Envío</string>
+    <string name="labelTakeAway">Take Away</string>
+    <string name="btnAddPlate">Agregar Platos</string>
 </resources>
