--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="labelPrice">Precio</string>
     <string name="labelCalories">Calorías</string>
     <string name="btnSave">Guardar</string>
+    <string name="btnAsk">Pedir</string>
     <string name="ToastInvalidSpacesPlate">Campos no válidos/incompletos</string>
     <string name="ToastSuccessfulTransactionPlate">El plato ha sido creado con éxito</string>
 
@@ -69,4 +70,5 @@
     <string name="labelSend">Envío</string>
     <string name="labelTakeAway">Take Away</string>
     <string name="btnAddPlate">AGREGAR PLATOS A PEDIDO</string>
+
 </resources>
