--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,9 @@
     <string name="btnAddPlate">AGREGAR PLATOS A PEDIDO</string>
     <string name="textTitlePlate">Plato: </string>
     <string name="textPricePlate">Precio: </string>
+    <string name="textAceptAsk">Realizar Pedido </string>
+    <string name="failedOrder">Debe seleccionar un pedido</string>
+    <string name="successfulOrder">Pedido exitoso!</string>
 
 
 </resources>
