campos validados en pedido

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,7 +72,8 @@
     <string name="btnAddPlate">AGREGAR PLATOS A PEDIDO</string>
     <string name="labelTotalPrice">Precio total: </string>
     <string name="textAceptAsk">Realizar Pedido </string>
-    <string name="failedOrder">Debe seleccionar un pedido</string>
+    <string name="failedOrder">Revisar los campos ingresados</string>
     <string name="successfulOrder">Pedido exitoso!</string>
+    <string name="lblcantidadproductos">Cantidad productos: </string>
 
 </resources>
